# Ephemeral-Location-Sharing-App

./: .editorconfig  .env.example  .gitignore  CODEOWNERS  QUICKSTART.md  README.md  features_and_working.md  melos.yaml  package.json  redis-dev-server.py
.github/: CODEOWNERS  labeler.yml
apps/backend/: Dockerfile  README.md  docker-compose.observability.yml  docker-compose.prod.yml  pyproject.toml
apps/backend/infra/nginx/: nginx.conf
apps/backend/infra/observability/grafana/dashboards/: radar-overview.json
apps/backend/infra/observability/grafana/provisioning/dashboards/: dashboards.yml
apps/backend/src/: main.py
apps/backend/src/api/v1/routes/: auth.py  compliance.py  health.py  sessions.py
apps/backend/src/core/: config.py  exceptions.py  logging.py  observability.py  rate_limit.py  security.py
apps/backend/src/infrastructure/: metrics.py  middleware.py  redis_client.py
apps/backend/src/models/: auth.py  session.py  ws.py
apps/backend/src/repositories/: redis_repository.py  session_repository.py
apps/backend/src/services/: broadcaster.py  connection_manager.py  notifications.py  websocket_service.py
apps/backend/src/static/: join.html
apps/backend/tests/: conftest.py
apps/backend/tests/api/: test_auth_token_system.py  test_session_lifecycle.py  test_websocket_server.py
apps/backend/tests/core/: test_logging.py
apps/backend/tests/load/: locustfile.py
apps/backend/tests/repositories/: test_session_repository.py
apps/backend/tests/services/: test_notifications.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  api.md  (+8 more)
(+76 files in other folders)
